[package]
name = "pyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
eyre = "0.6.8"
regex = "1.9.5"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "pyze"
path = "src/main.rs"
